--- a/layouts/partials/views/citation.html
+++ b/layouts/partials/views/citation.html
@@ -13,8 +13,8 @@
   </span>
   ({{- $item.Date.Format "2006" -}}).
   <a href="{{ $title_link }}" class="underline" {{ if ne $title_link $item.RelPermalink }}target="_blank" rel="noopener"{{ end }}>{{ $item.Title }}</a>.
-  {{ if $item.Params.publication_short }}{{- $item.Params.publication_short | markdownify -}}.
-  {{ else if $item.Params.publication }}{{- $item.Params.publication | markdownify -}}.
+  {{ if $item.Params.publication_short }}<em>{{- $item.Params.publication_short | markdownify -}}</em>.
+  {{ else if $item.Params.publication }}<em>{{- $item.Params.publication | markdownify -}}</em>.
   {{ end }}
 
   {{ if or $cite $code }}
@@ -38,8 +38,8 @@
 
   <span class="article-metadata li-cite-author">{{ partial "page_metadata_authors" $item }}.</span>
   <a href="{{ $title_link }}" {{ if ne $title_link $item.RelPermalink }}target="_blank" rel="noopener"{{ end }}>{{ $item.Title }}</a>.
-  {{ if $item.Params.publication_short }}{{- $item.Params.publication_short | markdownify -}},
-  {{ else if $item.Params.publication }}{{- $item.Params.publication | markdownify -}},{{ end }}
+  {{ if $item.Params.publication_short }}<em>{{- $item.Params.publication_short | markdownify -}}</em>,
+  {{ else if $item.Params.publication }}<em>{{- $item.Params.publication | markdownify -}}</em>,{{ end }}
   {{- $item.Date.Format "2006" -}}.
 
   {{ if or $cite $code }}
